--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "prettier": "2.6.2",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
