--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
