--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.5",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.43",
     "@types/react": "^18.0.12",
@@ -54,6 +57,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0"
   }
 }
