--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-typescript": "^7.17.12",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.3",
     "@mui/material": "^5.8.5",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.43",
@@ -41,6 +42,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "2.6.2",
+    "react-hook-form": "^7.33.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
@@ -52,7 +54,8 @@
     "typescript": "^4.7.3",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.1"
+    "webpack-dev-server": "^4.9.1",
+    "yup": "^0.32.11"
   },
   "dependencies": {
     "axios": "^0.27.2",
